--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
     }
   ],
   "require": {
-    "mia3/saku": "*"
+    "mia3/saku": "*",
+    "symfony/dom-crawler": "^3.1",
+    "symfony/css-selector": "^3.1",
+    "wa72/htmlpagedom": "^1.3"
   },
   "autoload": {
     "psr-4": {
