--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "mia3/saku": "*",
     "symfony/dom-crawler": "^3.1",
     "symfony/css-selector": "^3.1",
-    "wa72/htmlpagedom": "^1.3"
+    "wa72/htmlpagedom": "^1.3",
+    "guzzlehttp/guzzle": "~6.0"
   },
   "autoload": {
     "psr-4": {
