--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     }
   ],
   "require": {
-    "mia3/saku": "^1.0",
+    "mia3/saku": "1.1.4",
     "symfony/css-selector": "^4.0",
     "wa72/htmlpagedom": "^1.3",
     "guzzlehttp/guzzle": "~6.0"
