--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     }
   ],
   "require": {
+    "typo3/cms-core": ">=9.0.0",
     "mia3/saku": "^1.0",
     "symfony/dom-crawler": "^4.0",
     "symfony/css-selector": "^4.0",
